<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white_corner_16dp"
    android:layout_margin="12dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/tv_header_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:text="@string/tv_note"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:padding="12dp"
        android:background="@drawable/bg_white_corner_16dp_topleft_topright"/>

    <TextView
        android:id="@+id/tv_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_header_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="8dp"
        android:text="@string/tv_add_note"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_content_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_note"
        android:padding="10dp"
        android:layout_margin="12dp"
        android:textSize="14dp"
        android:hint="@string/tv_hint_new_note"
        android:background="@drawable/bg_white_corner_10_border_gray"/>

    <Button
        android:id="@+id/bt_dialog_cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/et_content_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_dialog_confirm"
        app:layout_constraintBottom_toBottomOf="@+id/bt_dialog_confirm"
        android:layout_marginTop="14dp"
        android:text="@string/bt_cancel"
        android:background="@drawable/bg_gray_corner_10dp"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.21"/>

    <Button
        android:id="@+id/bt_dialog_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/et_content_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bt_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="@id/bt_dialog_cancel"
        android:layout_marginTop="14dp"
        android:text="@string/bt_confirm"
        android:background="@drawable/bg_yellow_corner_10"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.21"/>

</androidx.constraintlayout.widget.ConstraintLayout>